# bevy_uefi_example

./: Cargo.toml  justfile
src/: buffer.rs  diagnostics.rs  graphics.rs  keyboard.rs  lib.rs  main.rs  pointer.rs  time.rs
